--- a/client/src/index.css
+++ b/client/src/index.css
@@ -25,8 +25,8 @@ h5{
   @apply  text-[20px] lg:text-[25px] font-poppins font-bold;
 }
 
-.heading-m{
-  @apply text-[24px] font-poppins   ;
+h4{
+  @apply text-[20px] font-medium font-poppins  ;
 
 }
 
@@ -49,6 +49,10 @@ h5{
   @apply w-full px-[1rem] h-[2.5rem] md:h-[3rem] rounded-md border-0 md:border-[3px] border-solid border-black;
 }
 
+.txtbox2{
+  @apply w-full bg-transparent border-0 focus:ring-0 px-0;
+}
+
 /* logo design */
 .logo{
   @apply text-[35px] ;
@@ -61,4 +65,12 @@ h5{
 
 .btn1{
   @apply w-full md:min-w-[20rem] h-[3rem] bg-blue-700 text-white rounded-md hover:bg-blue-800 focus:bg-blue-800;
+}
+
+.btn2{
+  @apply w-full h-[3rem] ;
+}
+
+.noscroll::-webkit-scrollbar{
+  display: none;
 }
