--- a/client/src/index.css
+++ b/client/src/index.css
@@ -20,6 +20,9 @@ h1{
 h2{
   @apply text-[30px] md:text-[40px] lg:text-[50px] font-poppins  font-bold;
 }
+h3{
+  @apply text-[25px] font-poppins  font-semibold;
+}
 
 h5{
   @apply  text-[20px] lg:text-[25px] font-poppins font-bold;
@@ -69,6 +72,9 @@ h4{
 
 .btn2{
   @apply w-full h-[3rem] ;
+}
+.btn3{
+  @apply px-3 py-2 w-[5rem] text-white bg-blue-500 hover:bg-blue-600 focus:bg-blue-600 rounded-full;
 }
 
 .noscroll::-webkit-scrollbar{
