--- a/client/src/index.css
+++ b/client/src/index.css
@@ -28,6 +28,7 @@ h5{
   @apply  text-[20px] lg:text-[25px] font-poppins font-bold;
 }
 
+
 h4{
   @apply text-[20px] font-medium font-poppins  ;
 
@@ -75,6 +76,13 @@ h4{
 }
 .btn3{
   @apply px-3 py-2 w-[5rem] text-white bg-blue-500 hover:bg-blue-600 focus:bg-blue-600 rounded-full;
+}
+
+.btn4{
+  @apply px-3 py-1 flex items-center border-2 border-solid border-black dark:border-slate-200 dark:text-slate-200 rounded-full;
+}
+.btn5{
+  @apply px-3 py-1 flex items-center border-2 border-solid text-white border-blue-500 bg-blue-500 hover:bg-blue-600 focus:bg-blue-600 rounded-full;
 }
 
 .noscroll::-webkit-scrollbar{
